--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -131,7 +131,8 @@ jobs:
             rm -rf .git
           fi
           
-          mv dist dist-${{ runner.os }}
+          mkdir dist/
+          mv dist-${{ runner.os }}/* dist/
 
       - name: Pushing dist directory
         run: | 
