--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -131,11 +131,13 @@ jobs:
             rm -rf .git
           fi
           
-          mkdir dist/
-          mv dist-${{ runner.os }}/* dist/
+          mv dist dist-${{ runner.os }}
 
       - name: Pushing dist directory
-        run: | 
+        run: |
+          mkdir -p dist/
+          mv dist-${{ runner.os }}/* dist/
+
           if [ -d "Equicord/dist" ]; then
             git config user.name "github-actions"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
