--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -131,23 +131,6 @@ jobs:
             rm -rf .git
           fi
 
-      - name: Pushing dist directory
-        run: |
-          if [ -d "Equicord/dist" ]; then
-            git config user.name "github-actions"
-            git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git pull "https://$GITHUB_ACTOR:${{ secrets.MY_PAT }}@github.com/segeyy/fP-Auto-Build.git" main
-
-            echo "Adding dist directory to git"
-            git add Equicord/dist
-
-            git commit -m "🤖 feat(build/Equicord): Dist directory adding"
-            git push "https://$GITHUB_ACTOR:${{ secrets.MY_PAT }}@github.com/segeyy/fP-Auto-Build.git" main
-          else
-            echo "WARNING: dist directory not found!"
-            ls -la Equicord
-          fi
-
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -184,11 +167,9 @@ jobs:
               os_name=$(basename "$os_dir")
               mkdir -p "Equicord/dist/$os_name"
               cp -a "$os_dir"/* "Equicord/dist/$os_name/"
+              git add Equicord/dist/$os_name/
             fi
           done
-          
-          echo "Combined dist contents:"
-          ls -la Equicord/dist
 
           git add Equicord
           if ! git diff-index --quiet HEAD -- Equicord; then
