--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 * * * *'
   workflow_dispatch:
 permissions:
-  contents: write-all
+  contents: write
 
 jobs:
   equicord-setup:
