upd(build/Equicord)

--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -157,12 +157,12 @@ jobs:
               mkdir -p "Equicord/dist/$os_name"
               cp -a "$os_dir"/* "Equicord/dist/$os_name/"
               git add Equicord/dist/$os_name/
-
-              echo "Pushing Equicord/dist/$os_name/"
-              git commit -am "🤖 feat(build/Equicord): Adding `dist/` folder"
-              git push "https://$GITHUB_ACTOR:${{ secrets.MY_PAT }}@github.com/segeyy/fP-Auto-Build.git" main
             fi
           done
+
+          echo "Pushing dist folders"
+          git commit -am "🤖 feat(build/Equicord): Adding `Equicord/dist/$os_name/` folder"
+          git push "https://$GITHUB_ACTOR:${{ secrets.MY_PAT }}@github.com/segeyy/fP-Auto-Build.git" main
 
       - name: Commit Equicord changes
         run: |
