fix(build/Equicord):  /home/runner/work/_temp/f07451b5-f128-4879-bead-5772c746cd38.sh: line 17: Equicord/dist//: Is a directory

--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -156,12 +156,12 @@ jobs:
               os_name=$(basename "$os_dir")
               mkdir -p "Equicord/dist/$os_name"
               cp -a "$os_dir"/* "Equicord/dist/$os_name/"
-              git add Equicord/dist/$os_name/
+              git add Equicord/dist/*
             fi
           done
 
           echo "Pushing dist folders"
-          git commit -am "🤖 feat(build/Equicord): Adding `Equicord/dist/$os_name/` folder"
+          git commit -am "🤖 feat(build/Equicord): Adding `Equicord/dist/` folder"
           git push "https://$GITHUB_ACTOR:${{ secrets.MY_PAT }}@github.com/segeyy/fP-Auto-Build.git" main
 
       - name: Commit Equicord changes
