--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -4,6 +4,9 @@ on:
   schedule:
     - cron: '0 * * * *'
   workflow_dispatch:
+  push:
+    tags:
+      - 'v*.*.*'
 
 jobs:
   equicord-setup:
@@ -180,13 +183,13 @@ jobs:
             echo "No changes in Equicord directory"
           fi
 
-      #- name: GH Release
-      #  uses: softprops/action-gh-release@v2.3.2
-      - name: Release
+      - name: Upload Release
+        if: ${{ github.ref_name == 'main' }}
         env:
           GITHUB_TOKEN: ${{ secrets.MY_PAT }}
-        run: >-
-          gh release create ${{ github.ref_name }}
-          "release-build.zip"
-          --generate-notes
-          --title "Version ${{ github.ref_name }} (or some other name)"
+          tag: ${{ github.ref_name }}
+        run: |
+          gh release create "$tag" \
+            --repo="$GITHUB_REPOSITORY" \
+            --title="${GITHUB_REPOSITORY#*/} ${tag#v}" \
+            --generate-notes
