--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -140,6 +140,9 @@ jobs:
           fetch-depth: 0
           submodules: false
           set-safe-directory: false
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
 
       - name: Download Equicord artifact
         uses: actions/download-artifact@v4
@@ -183,11 +186,14 @@ jobs:
             echo "No changes in Equicord directory"
           fi
 
+      - name: Generate tag Release
+        run: python3 main-repo/src/tag_generator.py
+
       - name: Upload Release
         if: ${{ github.ref_name == 'main' }}
         env:
           GITHUB_TOKEN: ${{ secrets.MY_PAT }}
-          tag: ${{ github.ref_name }}
+          tag: ${{ env.RELEASE_VERSION }}
         run: |
           gh release create "$tag" \
             --repo="$GITHUB_REPOSITORY" \
