--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -197,5 +197,5 @@ jobs:
         run: |
           gh release create "$tag" \
             --repo="$GITHUB_REPOSITORY" \
-            --title="${GITHUB_REPOSITORY#*/}-${tag#v}:" \
+            --title="${GITHUB_REPOSITORY#*/}-${tag#v}" \
             --generate-notes
