feat(build): Build in repository check

--- a/.github/workflows/equicord_custom_build.yml
+++ b/.github/workflows/equicord_custom_build.yml
@@ -171,6 +171,21 @@ jobs:
           echo "Combined dist contents:"
           ls -la Equicord/dist
 
+      - name: Builded Equicord commit
+        run: |
+          cd main-repo
+          git config user.name "github-actions"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git pull "https://$GITHUB_ACTOR:${{ secrets.MY_PAT }}@github.com/segeyy/fP-Auto-Build.git" main
+
+          if [ -d "Equicord/" ]; then
+            echo "Equicord build folder in repository is already exists, passing."
+          else
+            git add Equicord
+            git commit -m "🤖 feat(build/Equicord): Equicord build upload"
+            git push "https://$GITHUB_ACTOR:${{ secrets.MY_PAT }}@github.com/segeyy/fP-Auto-Build.git" main
+          fi
+
       - name: Commit Equicord changes
         run: |
           cd main-repo
