--- a/.github/workflows/vencord_custom_build.yml
+++ b/.github/workflows/vencord_custom_build.yml
@@ -337,6 +337,21 @@ jobs:
           echo "Installers:"
           ls -la Vencord/installers
 
+      - name: Builded Vencord commit
+        run: |
+          cd main-repo
+          git config user.name "github-actions"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git pull "https://$GITHUB_ACTOR:${{ secrets.MY_PAT }}@github.com/segeyy/fP-Auto-Build.git" main
+
+          if [ -d "Vencord/" ]; then
+            echo "Vencord build folder in repository is already exists, passing."
+          else
+            git add Vencord
+            git commit -m "🤖 feat(build/Vencord): Vencord build upload"
+            git push "https://$GITHUB_ACTOR:${{ secrets.MY_PAT }}@github.com/segeyy/fP-Auto-Build.git" main
+          fi
+
       - name: Commit Vencord changes
         run: |
           cd main-repo
