--- a/.github/workflows/vencord_custom_build.yml
+++ b/.github/workflows/vencord_custom_build.yml
@@ -348,6 +348,9 @@ jobs:
           ls -la Vencord/installers
 
       - name: Commit Vencord changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_PAT }}
+          tag: ${{ env.RELEASE_VERSION }}
         run: |
           cd main-repo
           git config user.name "github-actions"
@@ -356,22 +359,13 @@ jobs:
 
           git add Vencord
           if ! git diff-index --quiet HEAD -- Vencord; then
+            python3 main-repo/src/tag_generator.py
             git commit -m "🤖 feat(build/Vencord): Update installers $(date +'%Y-%m-%d %H:%M')"
             git push "https://$GITHUB_ACTOR:${{ secrets.MY_PAT }}@github.com/segeyy/fP-Auto-Build.git" main
+            gh release create "$tag" \
+              --repo="$GITHUB_REPOSITORY" \
+              --title="${GITHUB_REPOSITORY#*/}-${tag#v}" \
+              --generate-notes
           else
             echo "No changes in Vencord directory"
           fi
-
-      - name: Generate tag Release
-        run: python3 main-repo/src/tag_generator.py
-
-      - name: Upload Release
-        if: ${{ github.ref_name == 'main' }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_PAT }}
-          tag: ${{ env.RELEASE_VERSION }}
-        run: |
-          gh release create "$tag" \
-            --repo="$GITHUB_REPOSITORY" \
-            --title="${GITHUB_REPOSITORY#*/}-${tag#v}" \
-            --generate-notes
